/**
 * @fileoverview TDD Red Phase Tests for Theme Generation System
 * 
 * These tests define the expected behavior of the theme generation module.
 * They WILL FAIL because the implementation doesn't exist yet - that's intentional.
 * 
 * @module tests/unit/engine/generateTheme.test
 * @see src/engine/generateTheme.ts (to be implemented)
 */

import { describe, it, expect, beforeEach } from 'vitest';
import { SeededRNG } from '@lib/rng';
import type { RunState } from '@engine/types';

// These imports WILL FAIL - they don't exist yet!
// This is the Red Phase of TDD - tests fail before implementation
import {
  generateTheme,
  getThemeDef,
} from '@engine/generateTheme';

import {
  createMockRunState,
  resetAllFixtureIds,
  DETERMINISTIC_SEED,
} from '../../fixtures';

// ============================================================================
// Theme Definition Interface Tests
// ============================================================================

/**
 * Expected structure of a theme definition
 */
interface ExpectedThemeDef {
  id: string;
  name: string;
  description?: string;
  enemyTags: string[];
  colors?: {
    primary: string;
    secondary: string;
    accent?: string;
  };
}

// ============================================================================
// generateTheme() Tests
// ============================================================================

describe('generateTheme', () => {
  let baseState: RunState;
  let rng: SeededRNG;

  beforeEach(() => {
    resetAllFixtureIds();
    rng = new SeededRNG(12345);
    baseState = createMockRunState({
      seed: DETERMINISTIC_SEED,
      themeId: 'dungeon_start',
    });
  });

  describe('theme ID generation', () => {
    it('should return a valid theme ID', () => {
      const themeId = generateTheme(baseState, rng);
      
      expect(typeof themeId).toBe('string');
      expect(themeId.length).toBeGreaterThan(0);
    });

    it('should return one of the available theme IDs', () => {
      const validThemes = [
        'dungeon_start',
        'crypt',
        'sewer',
        'cave',
        'forest',
        'castle',
        'hell',
      ];

      const themeId = generateTheme(baseState, rng);
      
      // Either the theme is in the known list or it's a valid extension
      expect(typeof themeId).toBe('string');
    });
  });

  describe('determinism', () => {
    it('should be deterministic with seeded RNG', () => {
      const rng1 = new SeededRNG(42);
      const rng2 = new SeededRNG(42);

      const theme1 = generateTheme(baseState, rng1);
      const theme2 = generateTheme(baseState, rng2);

      expect(theme1).toBe(theme2);
    });

    it('should produce different themes with different seeds', () => {
      const themes = new Set<string>();
      
      for (let i = 0; i < 20; i++) {
        const theme = generateTheme(baseState, new SeededRNG(i * 1000));
        themes.add(theme);
      }

      // Should have some variety in theme selection
      expect(themes.size).toBeGreaterThanOrEqual(2);
    });
  });

  describe('state-based selection', () => {
    it('should picks from available themes', () => {
      // Run multiple times to verify it picks from a pool
      const themes = new Set<string>();
      
      for (let i = 0; i < 50; i++) {
        const state = createMockRunState({ 
          ...baseState, 
          depth: i * 10 
        });
        const theme = generateTheme(state, new SeededRNG(i));
        themes.add(theme);
      }

      // Should select from multiple available themes
      expect(themes.size).toBeGreaterThanOrEqual(1);
    });
  });
});

// ============================================================================
// getThemeDef() Tests
// ============================================================================

describe('getThemeDef', () => {
  describe('valid theme lookup', () => {
    it('should return theme definition for valid ID "dungeon_start"', () => {
      const themeDef = getThemeDef('dungeon_start');

      expect(themeDef).toBeDefined();
      expect(typeof themeDef).toBe('object');
    });

    it('should return theme definition for valid ID "crypt"', () => {
      const themeDef = getThemeDef('crypt');

      expect(themeDef).toBeDefined();
      expect(typeof themeDef).toBe('object');
    });

    it('should return theme definition for valid ID "sewer"', () => {
      const themeDef = getThemeDef('sewer');

      expect(themeDef).toBeDefined();
      expect(typeof themeDef).toBe('object');
    });
  });

  describe('fallback behavior', () => {
    it('should return dungeon_start as fallback for invalid ID', () => {
      const themeDef = getThemeDef('invalid_theme_xyz');

      expect(themeDef).toBeDefined();
      // Should fallback to dungeon_start
    });

    it('should return dungeon_start as fallback for empty string', () => {
      const themeDef = getThemeDef('');

      expect(themeDef).toBeDefined();
    });

    it('should handle null-like values gracefully', () => {
      // @ts-expect-error - Testing invalid input handling
      const themeDef = getThemeDef(null);

      expect(themeDef).toBeDefined();
    });

    it('should handle undefined gracefully', () => {
      // @ts-expect-error - Testing invalid input handling
      const themeDef = getThemeDef(undefined);

      expect(themeDef).toBeDefined();
    });
  });

  describe('theme definition structure', () => {
    it('should include enemyTags array', () => {
      const themeDef = getThemeDef('dungeon_start');

      expect(themeDef.enemyTags).toBeDefined();
      expect(Array.isArray(themeDef.enemyTags)).toBe(true);
      expect(themeDef.enemyTags.length).toBeGreaterThan(0);
    });

    it('should have enemyTags as strings', () => {
      const themeDef = getThemeDef('dungeon_start');

      for (const tag of themeDef.enemyTags) {
        expect(typeof tag).toBe('string');
      }
    });

    it('should contain relevant enemy tags for dungeon_start', () => {
      const themeDef = getThemeDef('dungeon_start');

      // dungeon_start should have basic dungeon enemy tags
      expect(themeDef.enemyTags.length).toBeGreaterThan(0);
    });

    it('should contain relevant enemy tags for crypt', () => {
      const themeDef = getThemeDef('crypt');

      // crypt should have undead-related tags
      expect(themeDef.enemyTags.length).toBeGreaterThan(0);
    });
  });

  describe('theme variety', () => {
    it('should have different enemyTags for different themes', () => {
      const dungeonDef = getThemeDef('dungeon_start');
      const cryptDef = getThemeDef('crypt');

      // Different themes should have different enemy pools
      const dungeonTags = new Set(dungeonDef.enemyTags);
      const cryptTags = new Set(cryptDef.enemyTags);

      // They might overlap, but shouldn't be identical
      const areIdentical = 
        dungeonTags.size === cryptTags.size &&
        [...dungeonTags].every(tag => cryptTags.has(tag));

      // It's OK if they're identical for now, but ideally they differ
      expect(typeof areIdentical).toBe('boolean');
    });
  });
});

// ============================================================================
// Theme Integration Tests
// ============================================================================

describe('Theme and Room Generation Integration', () => {
  beforeEach(() => {
    resetAllFixtureIds();
  });

  it('should use theme enemyTags to filter enemies in rooms', () => {
    const rng = new SeededRNG(54321);
    const state = createMockRunState({
      seed: 'theme-integration-test',
      themeId: 'crypt',
      depth: 5,
    });

    // The theme should influence which enemies appear
    const themeDef = getThemeDef(state.themeId);
    expect(themeDef.enemyTags).toBeDefined();
    expect(themeDef.enemyTags.length).toBeGreaterThan(0);
  });

  it('should provide consistent theming across a segment', () => {
    const rng = new SeededRNG(11111);
    
    // Generate themes for rooms in same segment
    const themes: string[] = [];
    for (let depth = 1; depth <= 9; depth++) {
      const state = createMockRunState({
        seed: 'segment-theme-test',
        depth,
      });
      // Theme should stay consistent within segment
      themes.push(state.themeId);
    }

    // In the same run, theme should be consistent for the segment
    expect(themes.every(t => t === themes[0])).toBe(true);
  });
});

// ============================================================================
// Snapshot Tests for Themes
// ============================================================================

describe('Theme Definition Snapshots', () => {
  beforeEach(() => {
    resetAllFixtureIds();
  });

  it('should have consistent dungeon_start theme structure', () => {
    const themeDef = getThemeDef('dungeon_start');
    expect(themeDef).toMatchSnapshot();
  });

  it('should have consistent crypt theme structure', () => {
    const themeDef = getThemeDef('crypt');
    expect(themeDef).toMatchSnapshot();
  });

  it('should have consistent sewer theme structure', () => {
    const themeDef = getThemeDef('sewer');
    expect(themeDef).toMatchSnapshot();
  });
});

// ============================================================================
// Edge Cases and Error Handling
// ============================================================================

describe('Theme Edge Cases', () => {
  it('should handle very long theme IDs', () => {
    const longId = 'a'.repeat(1000);
    const themeDef = getThemeDef(longId);

    // Should fallback to default
    expect(themeDef).toBeDefined();
  });

  it('should handle special characters in theme ID', () => {
    const specialId = 'theme<script>alert(1)</script>';
    const themeDef = getThemeDef(specialId);

    // Should fallback to default
    expect(themeDef).toBeDefined();
  });

  it('should handle numeric theme ID', () => {
    // @ts-expect-error - Testing invalid input handling
    const themeDef = getThemeDef(123);

    // Should fallback to default
    expect(themeDef).toBeDefined();
  });
});
